# remove(), rename(), and __dup3() are exceptional cases.
# remove()/rename() are really unistd-like functions we don't want included.
# __dup3 is an internal musl thing called by freopen()
set(stdio_src
    asprintf.c
    clearerr.c
    dprintf.c
    ext2.c
    ext.c
    fclose.c
    __fclose_ca.c
    __fdopen.c
    feof.c
    ferror.c
    fflush.c
    fgetc.c
    fgetln.c
    fgetpos.c
    fgets.c
    fgetwc.c
    fgetws.c
    fileno.c
    flockfile.c
    fmemopen.c
    __fmodeflags.c
    fopen.c
    fopencookie.c
    __fopen_rb_ca.c
    fprintf.c
    fputc.c
    fputs.c
    fputwc.c
    fputws.c
    fread.c
    freopen.c
    fscanf.c
    fseek.c
    fsetpos.c
    ftell.c
    ftrylockfile.c
    funlockfile.c
    fwide.c
    fwprintf.c
    fwrite.c
    fwscanf.c
    getc.c
    getchar.c
    getchar_unlocked.c
    getc_unlocked.c
    getdelim.c
    getline.c
    gets.c
    getw.c
    getwc.c
    getwchar.c
    __lockfile.c
    ofl_add.c
    ofl.c
    open_memstream.c
    open_wmemstream.c
    __overflow.c
    pclose.c
    perror.c
    popen.c
    printf.c
    putc.c
    putchar.c
    putchar_unlocked.c
    putc_unlocked.c
    puts.c
    putw.c
    putwc.c
    putwchar.c
#    remove.c
#    rename.c
    rewind.c
    scanf.c
    setbuf.c
    setbuffer.c
    setlinebuf.c
    setvbuf.c
    snprintf.c
    sprintf.c
    sscanf.c
    stderr.c
    stdin.c
    __stdio_close.c
    __stdio_exit.c
    __stdio_read.c
    __stdio_seek.c
    __stdio_write.c
    stdout.c
    __stdout_write.c
    __string_read.c
    swprintf.c
    swscanf.c
    tempnam.c
    tmpfile.c
    tmpnam.c
    __toread.c
    __towrite.c
    __uflow.c
    ungetc.c
    ungetwc.c
    vasprintf.c
    vdprintf.c
    vfprintf.c
    vfscanf.c
    vfwprintf.c
    vfwscanf.c
    vprintf.c
    vscanf.c
    vsnprintf.c
    vsprintf.c
    vsscanf.c
    vswprintf.c
    vswscanf.c
    vwprintf.c
    vwscanf.c
    wprintf.c
    wscanf.c
)
add_library(stdio STATIC ${stdio_src})
